--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "async": "2.0.1",
     "compile-run": "^1.2.2",
     "grunt": "1.0.1",
+    "pegjs": "^0.10.0",
     "sails": "^1.0.0",
     "sails-hook-grunt": "^3.0.2",
     "sails-hook-orm": "^2.0.0-16",
